[package]
name = "esp32-hub75-i2s-dma"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "defmt",
]}
micromath = "2.1.0"
esp-hal = { version = "0.23.1", features = [
    "esp32",
    "defmt",
    "unstable",
] }
esp-alloc = { version = "0.5.0" }
defmt            = {version = "0.3.8", optional = true } 
defmt-rtt        = "0.4.1"
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-12288",
    "defmt"
] }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"
embedded-graphics = { version = "0.8.1" }
embassy-sync = { version = "0.6.2" }
bitfield = { version = "0.17.0" }
esp-hub75 = { git = "https://github.com/liebman/esp-hub75", features = ["esp32"] }
heapless = { version = "0.8.0", features = ["ufmt"] }
micro-viz = { path = "../micro-viz" }

[features]
default = ["defmt"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
esp-backtrace    = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-build        = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal          = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal-embassy  = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-println      = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-riscv-rt     = { git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx-rt     = { git = "https://github.com/esp-rs/esp-hal.git" }

