[package]
name = "micro-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
micromath = "2.1.0"
defmt            = {version = "1.0.1", optional = true } 
defmt-rtt        = {version = "1.0.0", optional = true }

[features]
std = []
default = []
logging = ["defmt", "defmt-rtt"]

[dev-dependencies]
approx = "0.5"