[package]
name = "totone"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.15.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "defmt",
]}

esp-hal = { version = "=1.0.0-beta.0", features = [
    "esp32s3",
    "defmt",
    "unstable",
] }
esp-alloc = { version = "0.7.0" }
defmt            = "0.3.8"
defmt-rtt        = "0.4.1"
embassy-sync        = "0.6.2"
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-12288",
    "defmt"
] }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.7.0",  features = ["esp32s3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"
micro-dsp = {path = "../micro-dsp"}
microdsp = "0.1.2"
micromath = "2.1.0"
cfg-if              = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
