[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Salsa Steve",email = "elmanstevelaguna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "scripts", from = "src"}]

[tool.poetry.dependencies]
numpy = "2.2.4"
pyftdi = "0.56.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
